# SocChina_2023_Bouffalo

./: README.md
our_project_bl616_Electronic_Cateye/: CMakeLists.txt  Makefile  README.md  fhm_onechannel_16k_20.h  main.c  proj.conf
our_project_bl616_Electronic_Cateye/image/: gc0308.h  image_trans.c  image_trans.h
our_project_bl616_Electronic_Cateye/lwip_http/: lwip_http.c  lwip_http.h  lwipopts_user.h
our_project_bl616_Electronic_Cateye/sev_btble/: btble.c
our_project_bl616_Electronic_Doorlocks/: CMakeLists.txt  FreeRTOSConfig.h  README.md  lcd_conf_user.h  main.c  proj.conf
our_project_bl616_Electronic_Doorlocks/finger_identify/: as608.c  as608.h  finger_identify.c  finger_identify.h
our_project_bl616_Electronic_Doorlocks/keyboard/: keyboard.c  keyboard.h
our_project_bl616_Electronic_Doorlocks/lcd/: lcd_conf.h
our_project_bl616_Electronic_Doorlocks/lwip_http/: lwip_http.c  lwip_http.h
our_project_bl616_Electronic_Doorlocks/sev_btble/: btble.c
our_project_bl702_Electronic_Monitoring/: CMakeLists.txt  detection_responder.cc  image_provider.cc  image_provider.h  main.c  main_functions.cc  main_functions.h  model_settings.cc  readme.md  submodule_commit_info.txt
our_project_bl702_Electronic_Monitoring/wifi_at_http/: at.c  at.h
